# browserlist

./: .eslintrc  .gitignore  .tool-versions  .yarnrc.yml  CNAME  README.md  index.html  manifest.webmanifest  package.json  postcss.config.cjs  sw.js  vite.config.js
.github/workflows/: codeql-analysis.yml  deploy.yml
assets/: browserslistwasm_bg.01e5af6f.wasm  browserslistwasm_bg.0dec997c.wasm  browserslistwasm_bg.1757b350.wasm  browserslistwasm_bg.1799b5a5.wasm  browserslistwasm_bg.2491c262.wasm  browserslistwasm_bg.42de3ec1.wasm  browserslistwasm_bg.59ab4169.wasm  browserslistwasm_bg.59cef7ef.wasm  browserslistwasm_bg.70dd6323.wasm  browserslistwasm_bg.795c0f96.wasm  browserslistwasm_bg.842592f9.wasm  browserslistwasm_bg.92528a19.wasm  browserslistwasm_bg.92bb2ee2.wasm  browserslistwasm_bg.wasm  index.0e7911e6.js  index.1fe99126.js  index.34655014.js  index.3522f485.js  index.357028bc.js  index.37c844d9.js  index.391227a3.js  index.3fca84f2.js  index.42cc045e.js  index.48b0b26c.js  index.4f49dee3.js  index.5e725306.js  index.7bd66bab.js  index.7f215ff6.js  index.7f4f1890.js  index.8a70a2c9.js  index.8dff3b48.js  index.8e3c968e.js  index.900ca32a.js  index.96d3023c.js  index.9716dff1.js  index.98682400.js  index.987a535a.js  index.a08fc60e.js  index.a4141723.js  index.a8ca1db0.js  (+38 more)
browserslist-wasm/: Cargo.toml  LICENSE_MIT
browserslist-wasm/src/: lib.rs
public/: sw.js
src/: App.svelte  ReloadPrompt.svelte  main.js
src/components/: BrowserInfo.svelte  GithubCorner.svelte  ReloadPrompt.svelte  SWPrompt.svelte
src/css/: app.css
src/utils/: browsers.js
