[package]
name = "browserslist-wasm"
version = "0.1.0"
authors = ["Alexey Vasiliev"]
edition = "2018"

[lib]
name = "browserslistwasm"
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
serde-wasm-bindgen = "0.3.1"
wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"] }
browserslist-rs = { git = "https://github.com/g-plane/browserslist-rs", branch = "main" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[patch.crates-io]
parking_lot = { git = "https://github.com/Amanieu/parking_lot" }
parking_lot_core = { git = "https://github.com/Amanieu/parking_lot", package = "parking_lot_core" }

[dev-dependencies]
wasm-bindgen-test = "0.3.28"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
