[package]
name = "browserslist-wasm"
version = "0.1.1"
authors = ["Alexey Vasiliev"]
edition = "2021"

[lib]
name = "browserslistwasm"
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
serde-wasm-bindgen = "0.6.5"
parking_lot = { version = "0.11", features = ["wasm-bindgen"] }
parking_lot_core = "0.9.10"
wasm-bindgen = { version = "0.2.95", features = ["serde-serialize"] }
browserslist-rs = { version = "0.16.0" }
getrandom = { version = "0.2.15", features = ["js"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.29"

[profile.release]
# Tell `rustc` to optimize for small code size.
lto = true
# opt-level = "s"
opt-level = "z"
